
   - DossierSettings: update main window title when remediated (todo #1165).
   - myIWindow: do nothing is destroy is not allowed.
   - ofoAccount: now considers the beginning of the exercice when archiving (todo #1226).
   - ofoBase: ofo_base_getter() returns default value if box is unset.
   - ofaLedgerPage: fix view entries.
   - ofaOpeTemplateSelect: fix initial selection (todo #1229).
   - ofoRecurrentModel: insert/update the DBMS with 'enabled' property.

 Caution:
 
     Bug #1226 may in particular appear in financial accounts where it is
     frequent to have entries from previous exercices (because non conciliated)
     this creates a balistic error which continue through all the exercice.

     This bug is identified and fixed in v0.61 (Core DB model v33).

 Other changes:

   - ofaIAccountFilter: remove ofa_iaccount_filter_set_prefs() unused method.
   - ofaIDateFilter: ofa_idate_filter_set_prefs() renamed to ofa_idate_filter_set_settings_key() (todo #1220).
   - ofaLedgerArcTreeview, ofaLedgerArcStore: new classes.
   - ofoEntry: review ofo_entry_get_dataset_xxx() methods (todo #1225).
   - ofaPaimeanFrameBin: new class (todo #714).
   - ofaPaimeanPage: new class (todo #714).
   - ofaPaimeanProperties: new class (todo #714).
   - ofaPaimeanSelect: new class (todo #714).
   - ofaPaimeanStore: new class (todo #714).
   - ofaPaimeanTreeview: new class (todo #714).
   - ofoPaimean: new class (todo #714).
   - ofsAccountBalance: remove unused API (todo #1224).

-----------------------------------------------------------------------
 Version 0.60
 ============

 Released on 2016-10-08
  
 New features and improvements:

   - RecurrentOperation: DB Model v5.
   - Accelerators: define new keys in Dossier menu (todo #1204).
   - AccountSelect, OpeTemplateSelect: save settings before hiding the dialog.
   - BalanceRender: improve appearance of header notes (todo #1191).
   - BalanceRender: improve columns titles (todo #1193).